--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
-    <string name="app_name">AndroidExperiments</string>
+    <string name="app_name">Giglio Onlus</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="openDrawer">Drawer opened</string>
     <string name="closeDrawer">Drawer closed</string>
+    <string name="title_activity_chi__siamo">Chi Siamo</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_chi_siamo">chi_siamo</string>
+    <string name="title_activity_case">Case</string>
 </resources>
